crates/velme-cli/tests/snapshots/check__ac_cmp_04_json_for_every_golden_error_file@tab_too_deep.velme.snap
---
source: crates/velme-cli/tests/check.rs
expression: "serde_json::to_string_pretty(&json).expect(\"JSON value serializes\")"
input_file: tests/golden/parser/reject/tab_too_deep.velme
---
{
  "diagnostics": [
    {
      "code": "VL0103",
      "file": "tab_too_deep.velme",
      "help": "replace the tab with spaces",
      "labels": [],
      "message": "Please indent with spaces, not tabs.",
      "notes": [],
      "severity": "error",
      "span": {
        "column": 1,
        "end": 124,
        "line": 4,
        "start": 123
      }
    }
  ],
  "format": "velme-cli/1",
  "notices": [],
  "results": [],
  "status": "failed"
}
